--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,12 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+psycopg2==2.8.6
 pyTelegramBotAPI==3.7.6
+pytz==2021.1
 requests==2.25.1
+selenium==3.141.0
+six==1.15.0
 urllib3==1.26.2
+vk-api==11.9.1
 Werkzeug==1.0.1
